# dev/backend/api/views.py
@@ -6,7 +6,7 @@ from rest_framework import status
 
 from django.shortcuts import get_object_or_404
 from moelasware.models import Test, Quiz, Tag, QuizAnswer
-from api.serializers import CreateTestSerializer, GetTestSerializer, QuizSerializer, QuizAnswerSerializer
+from api.serializers import CreateTestSerializer, GetTestSerializer, QuizSerializer, QuizAnswerSerializer, TagSerializer
 
 DEFAULT_TEST_PAGE_LIMIT = 20
 DEFAULT_TAG_PAGE_LIMIT = 20
@@ -127,7 +127,7 @@ def get_tag_view(request, pk, *args, **kwargs):
 
     if pk is not None:
         instance = get_object_or_404(Tag, pk=pk)
-        serializer = GetTagSerializer(instance, many=False)
+        serializer = TagSerializer(instance, many=False)
 
         return JsonResponse({"tag": serializer.data})
 
@@ -144,8 +144,32 @@ def get_all_tags_view(request, *args, **kwargs):
 
     queryset = Tag.objects.filter(pk__range=(offset, offset + limit))
 
-    serializer = GetTagSerializer(queryset, many=True)
+    serializer = TagSerializer(queryset, many=True)
     return JsonResponse({"tags": serializer.data})
+
+@api_view(["GET"])
+def get_quiz_view(request, pk):
+    # get a test with all the quizzAnswers attached to it
+    if pk is not None:
+        instance = get_object_or_404(Test, pk=pk)
+        serializer = GetTestSerializer(instance, many=False)
+
+        # get all the Quizzes for this test
+        quizzes = Quiz.objects.filter(test__id=pk)
+        quizzes_serializer = QuizSerializer(quizzes, many=True)
+
+        # for each quiz get all the answers
+        for quiz in quizzes_serializer.data:
+            answers = QuizAnswer.objects.filter(quiz__id=quiz["id"])
+            answers_serializer = QuizAnswerSerializer(answers, many=True)
+            quiz["answers"] = answers_serializer.data
+
+        return JsonResponse({"test": serializer.data, "quizzes": quizzes_serializer.data})
+
+    return JsonResponse({"invalid": "not good data"}, status=status.HTTP_400_BAD_REQUEST)
+    
+
+    
 
 
 # @api_view(['POST'])
